add new indicators plot in the framework
